--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 100vh;
+  height: auto;
 }
 
 h1 {
@@ -28,9 +28,8 @@ h1 {
 .grilles {
   display: flex;
   flex-wrap: wrap;
-  gap: 60px;
+  gap: 30px;
   justify-content: center;
-  margin-bottom: 20px;
 }
 
 h2 {
@@ -46,9 +45,8 @@ h2 {
   gap: 3px;
   background: #e0f7ff;
   padding: 10px;
-  border: 2px solid #003f5c;
   border-radius: 12px;
-  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 6px 4px rgb(43 58 112 / 68%);
 }
 
 .cell {
@@ -119,7 +117,7 @@ h2 {
   display: none;
   margin-top: 20px;
   padding: 10px 20px;
-  background-color: #005f99;
+  background-color: green;
   color: white;
   border: none;
   border-radius: 8px;
@@ -129,5 +127,5 @@ h2 {
 }
 
 #rejouer-btn:hover {
-  background-color: #004470;
+  background-color: rgb(22, 234, 22);
 }
